add dockerfile and readme

--- a/front/index.html
+++ b/front/index.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div v-if="errorMessage">
-                    <p class="has-text-danger">{{ errorMessage }}</p>
+                    <h3 class="has-text-danger">{{ errorMessage }}</h3>
                 </div>
             </div>
         </div>
